<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="40dp"
        android:text="@string/kalkulator_sederhana"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_pertama"
        android:textSize="10pt"
        android:textStyle="bold"
        android:background="@color/blue"/>

    <EditText
        android:id="@+id/edit_bilangan_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_kedua"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/bg"/>

    <EditText
        android:id="@+id/edit_bilangan_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="9dp"
            android:text="@string/tambah"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn_kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="9dp"
            android:text="@string/kurang"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn_kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="9dp"
            android:text="@string/kali"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn_bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="9dp"
            android:text="@string/bagi"
            android:textSize="10pt"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_akar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="5dp"
            android:text="@string/akar"
            android:textSize="10pt" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_hasil_kalkulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10pt"
        android:textStyle="italic"
        android:textColor="@color/purple_700"
        android:text="@string/hasil_kalkulator_sederhana"
        android:layout_margin="10pt"/>

    <Button
        android:id="@+id/tampilkan_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="5dp"
        android:text="@string/lihat_hasil"
        android:background="@color/blue"
        android:textSize="10pt"/>

</LinearLayout>